--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=irigation
+
+# H2 in-memory for local dev/tests
+spring.datasource.url=jdbc:h2:mem:irigation;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+server.port=8081
+
+#spring.datasource.url=jdbc:postgresql://ep-soft-silence-acaazcbg-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_eusDQM8X9vBH&sslmode=require&channelBinding=require
+#spring.datasource.username=neondb_owner
+#spring.datasource.password=npg_eusDQM8X9vBH
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=create
