--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=irigation
 
+# AWS Cognito Configuration
+aws.cognito.region=us-east-1
+aws.cognito.url=https://cognito-idp.us-east-1.amazonaws.com
+aws.cognito.userPoolId=us-east-1_yZKE3qUcL
+aws.cognito.clientId=56ormpcetn8ooi20igotajuggr
+aws.cognito.clientSecret=f1fr9e1l6nt7dludfjtlh1p3j5bol0duo5c8kjp2jobrk16oqpf
+
 # H2 in-memory for local dev/tests
 spring.datasource.url=jdbc:h2:mem:irigation;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
