feita implementação com swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=irigation
 
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.defaultModelsExpandDepth=1
+
 # AWS Cognito Configuration
 aws.cognito.region=us-east-1
 aws.cognito.url=https://cognito-idp.us-east-1.amazonaws.com
