--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 server.port=8081
 
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #spring.datasource.url=jdbc:postgresql://ep-soft-silence-acaazcbg-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_eusDQM8X9vBH&sslmode=require&channelBinding=require
 #spring.datasource.username=neondb_owner
 #spring.datasource.password=npg_eusDQM8X9vBH
