--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,7 @@ aws.cognito.userPoolId=us-east-1_yZKE3qUcL
 aws.cognito.clientId=56ormpcetn8ooi20igotajuggr
 aws.cognito.clientSecret=f1fr9e1l6nt7dludfjtlh1p3j5bol0duo5c8kjp2jobrk16oqpf
 
-# H2 in-memory for local dev/tests
-spring.datasource.url=jdbc:h2:mem:irigation;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-server.port=8081
+server.port = 8081
 
 # RabbitMQ Configuration
 spring.rabbitmq.host=localhost
@@ -30,9 +22,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#spring.datasource.url=jdbc:postgresql://ep-soft-silence-acaazcbg-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_eusDQM8X9vBH&sslmode=require&channelBinding=require
-#spring.datasource.username=neondb_owner
-#spring.datasource.password=npg_eusDQM8X9vBH
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://ep-soft-silence-acaazcbg-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_eusDQM8X9vBH&sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_eusDQM8X9vBH
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
