--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,11 @@
 			<optional>true</optional>
 		</dependency>
 
-<!-- <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>-->
+<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
