--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.datasource.url=jdbc:postgresql://ep-soft-silence-acaazcbg-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_eusDQM8X9vBH&sslmode=require&channelBinding=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_eusDQM8X9vBH
+spring.datasource.url=jdbc:postgresql://localhost:5432/irrigation
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
